--- a/css/signup-styles.css
+++ b/css/signup-styles.css
@@ -22,8 +22,9 @@ margin-right: auto;
 }
 
 .main-content {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
+  max-width: 1010px;
 }
 
 p {
@@ -80,7 +81,7 @@ Form Styles
 
 form input,
 select {
-  width: 70%;
+  width: 80%;
 }
 
 #zip {
@@ -91,6 +92,7 @@ select {
 input[type] {
     background: #dfefe2;
 }
+
 
 input[type]:focus {
   background: #f0edff;
@@ -105,6 +107,8 @@ input[placeholder]  {
 
 fieldset  {
   border: none;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 form  {
@@ -126,6 +130,7 @@ legend  {
 input[type="submit"]  {
   padding: 5px 10px;
   margin-top: 10px;
+  width: 100%;
   background: #8baca0;
   color: #fff;
   border: none;
@@ -136,6 +141,8 @@ input[type="submit"]  {
 .comments {
   margin-top: 20px;
   padding-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 textarea  {
@@ -143,8 +150,15 @@ textarea  {
   height: auto;
 }
 
-.xtra-info  {
-  float: left;
+input[type="checkbox"],
+input[type="radio"] {
+  margin-left: 0;
+  padding-left: 0;
+  width: 25px;
+}
+
+.news {
+  margin: auto;
 }
 
 /* ============================
@@ -164,14 +178,16 @@ Media Queries
     margin-bottom: 1.5em;
   }
 
-.flex label  {
-  min-width: 30%;
-  margin-left: 0;
-}
+  .flex label  {
+    min-width: 30%;
+    margin-left: 0;
+  }
 
-input[type="checkbox"] label,
-input[type="radio"] label {
-  padding-left: 11px;
-}
+  input[submit] {
+    margin: 0 auto;
+    display: block;
+  }
+
+
 
 }
